Add check-box field for controlling dual-stack endpoint mode

--- a/examples/index.html
+++ b/examples/index.html
@@ -32,6 +32,14 @@
                 <datalist id="regionList"></datalist>
                 <div id="region-invalid-feedback" class="invalid-feedback"></div>
             </div>
+            <div class="form-check-inline" style="margin-bottom:30px;">
+                <input class="form-check-input" type="checkbox" id="useDualStackEndpoints" value="useDualStackEndpoints">
+                <label for="useDualStackEndpoints" class="form-check-label">Use dual-stack endpoints</label>
+                <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true"
+                    title="<p>Will use dual-stack endpoints for ...</p>
+                    "><sup>&#9432;</sup>
+                </span>
+            </div>
             <h4>AWS Credentials</h4>
             <div class="form-group">
                 <label for="accessKeyId">Access Key ID</label>
