Signaling reconnect and refresh ice server config

--- a/examples/index.html
+++ b/examples/index.html
@@ -208,7 +208,7 @@
             </div>
 
             <details><summary class="h4">Advanced</summary>
-                <p><small>Filter settings for which ICE candidates are sent to and received from the peer.</small></p>
+                <p class="mt-3"><small>Filter settings for which ICE candidates are sent to and received from the peer.</small></p>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm">
@@ -261,6 +261,18 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="accept-udp" checked />
                                 <label for="accept-udp" class="form-check-label">Accept <code>udp</code> candidates from peer</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p class="mt-3"><small>Signaling reconnect</small></p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="signaling-reconnect" checked/>
+                                <label for="signaling-reconnect" class="form-check-label">Reopen signaling connection
+                                    after idle timeout <small>(Master only, non WebRTC ingestion)</small></label>
                             </div>
                         </div>
                     </div>
