--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,9 @@
                 <input class="form-check-input" type="checkbox" id="useDualStackEndpoints" value="useDualStackEndpoints">
                 <label for="useDualStackEndpoints" class="form-check-label">Use dual-stack endpoints</label>
                 <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true"
-                    title="<p>Will use dual-stack endpoints for ...</p>
+                    title="<p>Use dual-stack AWS endpoints, else will use legacy IPv4-only endpoints.</p>
+                    <a href=&quot;https://docs.aws.amazon.com/sdkref/latest/guide/feature-endpoints.html&quot;>Additional information</a>
+
                     "><sup>&#9432;</sup>
                 </span>
             </div>
