--- a/examples/index.html
+++ b/examples/index.html
@@ -317,6 +317,27 @@
                         </div>
                     </div>
                 </div>
+                <p class="mt-3"><small>TURN connection options</small><span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
+                                <p>Filter options for the URLs from the GetIceServerConfig API call.</p>"><sup>&#9432;</sup></span></p>
+                <div class="mt-3 mb-3 container">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="turn-with-udp" checked>
+                        <label class="form-check-label" for="turn-with-udp">TURN with UDP</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="turns-with-udp" checked>
+                        <label class="form-check-label" for="turns-with-udp">TURNS with UDP</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="turns-with-tcp" checked>
+                        <label class="form-check-label" for="turns-with-tcp">TURNS with TCP</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="turn-one-set-only" checked>
+                        <label class="form-check-label" for="turn-one-set-only">Use only one set of TURN servers<span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
+                            <p>GetIceServerConfig returns two sets of TURN servers, only use one of the sets.</p>"><sup>&#9432;</sup></span></label>
+                    </div>
+                </div>
                 <p class="mt-3"><small>Endpoint Override</small></p>
                 <div class="form-group">
                     <input type="text" class="form-control" id="endpoint" placeholder="Endpoint">
