give client id a default value

--- a/examples/index.html
+++ b/examples/index.html
@@ -61,7 +61,7 @@
                     <p>Only used in <code>viewer</code> mode. A unique identifier for the client. If left empty, a random client id will be generated.</p>
                     <a href=&quot;https://docs.aws.amazon.com/kinesisvideostreams-webrtc-dg/latest/devguide/kvswebrtc-websocket-apis-1.html&quot;>Additional information</a>
                     "><sup>&#9432;</sup></span>
-                <input type="text" class="form-control" id="clientId" placeholder="Client id">
+                <input type="text" class="form-control" id="clientId" placeholder="Client id" value="default-client-id">
             </div>
             <h4>Tracks</h4>
             <p><small>Control which media types are transmitted to the remote client. For WebRTC Ingestion and Storage master, both audio and video must be sent, and viewers cannot not send video and optional audio.</small></p>
