--- a/examples/index.html
+++ b/examples/index.html
@@ -25,14 +25,13 @@
     <div class="row loader"></div>
     <div id="main" class="d-none">
         <form id="form" onsubmit="return false">
-            <h4>KVS Endpoint</h4>
             <div class="form-group has-validation" style="position: relative;">
                 <label for="region">Region</label>
                 <input type="text" class="form-control valid" id="region" placeholder="Region" value="us-west-2" autocomplete="off" required>
                 <datalist id="regionList"></datalist>
                 <div id="region-invalid-feedback" class="invalid-feedback"></div>
             </div>
-            <h4>AWS Credentials</h4>
+            <h4 id="subheader">AWS Credentials</h4>
             <div class="form-group">
                 <label for="accessKeyId">Access Key ID</label>
                 <input type="text" class="form-control" id="accessKeyId" placeholder="Access key id" required>
@@ -45,7 +44,7 @@
                 <label for="sessionToken">Session Token <small>(optional)</small></label>
                 <input type="password" class="form-control" id="sessionToken" placeholder="Session token">
             </div>
-            <h4>Signaling Channel</h4>
+            <h4 id="subheader">Signaling Channel</h4>
             <div>
                 <label for="channelName">Channel Name</label>
                 <div class="form-group input-group">
@@ -63,7 +62,7 @@
                     "><sup>&#9432;</sup></span>
                 <input type="text" class="form-control" id="clientId" placeholder="Client id">
             </div>
-            <h4>Tracks</h4>
+            <h4 id="subheader">Tracks</h4>
             <p><small>Control which media types are transmitted to the remote client. For WebRTC Ingestion and Storage master, both audio and video must be sent, and viewers cannot not send video and optional audio.</small></p>
             <div class="form-group">
                 <div class="form-check-inline">
@@ -83,7 +82,7 @@
                     "><sup>&#9432;</sup></span>
                 </div>
             </div>
-            <details id="webrtc-ingestion-and-storage-group"><summary class="h4">WebRTC Ingestion and Storage</summary>
+            <details id="webrtc-ingestion-and-storage-group"><summary class="h4" id="subheader">WebRTC Ingestion and Storage</summary>
             <div>
                 <p><small>Configure which stream to ingest and store media to. Call update media storage configuration with an empty Stream name to disable this feature.</small></p>
                 <div class="form-group input-group">
@@ -137,7 +136,7 @@
                 </div>
             </div>
             </details>
-            <h4>Video Resolution</h4>
+            <h4 id="subheader">Video Resolution</h4>
             <p><small>Set the desired video resolution and aspect ratio.</small></p>
             <div class="form-group">
                 <div class="form-check">
@@ -149,7 +148,7 @@
                     <label class="form-check-label" for="fullscreen">640x480 <small>(4:3 fullscreen)</small></label>
                 </div>
             </div>
-            <h4>NAT Traversal</h4>
+            <h4 id="subheader">NAT Traversal</h4>
             <p><small>Control settings for ICE candidate generation.</small>
             <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info" data-toggle="tooltip" data-html="true" title="
                     <p>Determines the types of <code>ICE candidates</code> that are generated.<br/><br/>STUN/TURN = host, server reflexive, and relay<br/>STUN only = server reflexive<br/>TURN only = relay<br/>Disabled = host</p>
@@ -183,7 +182,7 @@
                 "><sup>&#9432;</sup></span>
                 </div>
             </div>
-            <h4>Amazon KVS WebRTC DQP</h4>
+            <h4 id="subheader">Amazon KVS WebRTC DQP</h4>
             <div class="form-group">
                 <div class="form-check-inline">
                     <input class="form-check-input" type="checkbox" id="enableDQPmetrics" value="enableDQPmetrics">
@@ -195,7 +194,7 @@
                 </div>
             </div>
 
-            <h4>Amazon KVS WebRTC Profiling Timeline chart</h4>
+            <h4 id="subheader">Amazon KVS WebRTC Profiling Timeline chart</h4>
             <div class="form-group">
                 <div class="form-check-inline">
                     <input class="form-check-input" type="checkbox" id="enableProfileTimeline" value="enableProfileTimeline">
@@ -207,7 +206,7 @@
                 </div>
             </div>
 
-            <details><summary class="h4">Advanced</summary>
+            <details><summary class="h4" id="subheader">Advanced</summary>
                 <p class="mt-3"><small>Filter settings for which ICE candidates are sent to and received from the peer.</small></p>
                 <div class="container">
                     <div class="row">
@@ -317,6 +316,7 @@
                         </div>
                     </div>
                 </div>
+
                 <p class="mt-3"><small>TURN connection options</small><span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
                                 <p>Filter options for the URLs from the GetIceServerConfig API call.</p>"><sup>&#9432;</sup></span></p>
                 <div class="mt-3 mb-3 container">
@@ -338,14 +338,45 @@
                             <p>GetIceServerConfig returns two sets of TURN servers, only use one of the sets.</p>"><sup>&#9432;</sup></span></label>
                     </div>
                 </div>
+
+                <div class="d-flex align-items-center mt-3">
+                    <p class="mb-0">
+                        <small>KVS Endpoint Type</small>
+                    </p>
+
+                    <!-- Tooltip icon -->
+                    <span data-delay="{ &quot;hide&quot;: 1500 }"
+                        data-position="auto"
+                        tabindex="0"
+                        class="text-info ml-1"
+                        data-toggle="tooltip"
+                        data-html="true"
+                        title="<p>Use dual-stack KVS endpoints, else will use legacy IPv4-only endpoints. Dual-stack mode will also allow for IPv6 ICE candidates if supported by the browser and local network.</p>
+                        <a href=&quot;https://docs.aws.amazon.com/sdkref/latest/guide/feature-endpoints.html&quot;>Additional information</a>">
+                        <sup>&#9432;</sup>
+                    </span>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="endpoint-type" id="legacy" value="option1" checked>
+                        <label class="form-check-label" for="legacy">Legacy <small>"amazonaws.com"</small></label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="endpoint-type" id="dual-stack" value="option2">
+                        <label class="form-check-label" for="dual-stack">Dual-stack <small>"api.aws"</small></label>
+                    </div>
+                </div>
+                                    
                 <p class="mt-3"><small>Endpoint Override</small></p>
                 <div class="form-group">
                     <input type="text" class="form-control" id="endpoint" placeholder="Endpoint">
                 </div>
+
             </details>
 
             <hr>
-            <div>
+            <div style="margin-top: 30px;">
                 <button id="master-button" type="submit" class="btn btn-primary">Start Master</button>
                 <button id="viewer-button" type="submit" class="btn btn-primary">Start Viewer</button>
             </div>
