--- a/examples/index.html
+++ b/examples/index.html
@@ -339,6 +339,15 @@
                     </div>
                 </div>
 
+                <p class="mt-3"><small>ICE Candidate Filtering</small><span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
+                                <p>Force the use of IPv6-only ICE candidates for WebRTC connections.</p>"><sup>&#9432;</sup></span></p>
+                <div class="mt-3 mb-3 container">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="force-ipv6-candidates">
+                        <label class="form-check-label" for="force-ipv6-candidates">Force IPv6 candidates</label>
+                    </div>
+                </div>
+
                 <div class="d-flex align-items-center mt-3">
                     <p class="mb-0">
                         <small>KVS Endpoint Type</small>
